--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.6",
     "devicons-react": "^1.2.6",
     "framer-motion": "^10.12.17",
     "react": "^18.2.0",
