--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.6",
+    "@vercel/analytics": "^1.3.1",
     "devicons-react": "^1.2.6",
     "framer-motion": "^10.12.17",
     "react": "^18.2.0",
